@@ -20,8 +20,11 @@ case $1 in
 
 	clean)
 		export ROOT=${2}
-		keepers="sys-kernel/linux-headers sys-devel/binutils sys-devel/hardened-gcc sys-devel/gcc sys-apps/baselayout sys-libs/glibc virtual/glibc virtual/kernel"
-		
+		keepers="sys-kernel/linux-headers sys-devel/binutils sys-devel/gcc sys-apps/baselayout sys-libs/glibc virtual/glibc virtual/kernel"
+		if [ ${BUILDTYPE} = "hardened" ]
+		then
+			keepers="${keepers} sys-devel/hardened-gcc"
+		fi
 		# set everything to uid 999 (nouser)
 		cd ${ROOT}
 		install -d var/db/pkg2
