@@ -1,9 +1,9 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.26 2003/10/09 00:33:30 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/catalyst,v 1.27 2003/10/10 01:33:53 zhen Exp $
 
-VERSION="2.0"
+VERSION="2.1"
 
 if [ -e files/catalyst.conf ]
 then
