@@ -1,11 +1,11 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/files/catalyst.conf,v 1.6 2003/10/02 17:46:58 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/files/catalyst.conf,v 1.7 2003/10/10 01:33:53 zhen Exp $
 
 # root for catalyst
 BASEDIR="/catalyst"
 
-# right now, our valid options are selinux and hardened
+# valid options are default, selinux, and hardened
 BUILDTYPE="hardened"
 
 # the version that we are building for
