@@ -1,6 +1,12 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.14 2003/10/09 00:33:29 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.15 2003/10/10 01:33:52 zhen Exp $
+
+  09 Oct 2003; <zhen@gentoo.org> catalyst, bin/build.sh, bin/stage1,
+  files/catalyst.conf, include/build_functions.sh, include/functions.sh:
+  the changes that I made to the above files should make catalyst completely
+  transparent to no matter what profile we are using. check files/catalyst.conf
+  for the list of BUILDTYPEs that we support.
 
   08 Oct 2003; zhen <zhen@gentoo.org> catalyst:
   changed how cmd line arguments are handled
